tests/jastadd/negative/name_errors/L3/2_ProcedureName.ob
MODULE TestModule;
	PROCEDURE f;
	END anotherName;
END TestModule.
